Add drag and drop and styling

--- a/mobileweb/soneme/www/directives/gridcover.html
+++ b/mobileweb/soneme/www/directives/gridcover.html
@@ -1,4 +1,4 @@
-<div class="gridcell" data-drag="true" jqyoui-draggable>
-    <img ng-src="{{song.coverUrl}}" width="80%" height="80%">
+<div class="gridcell" data-drag="true" jqyoui-draggable="{animate:true}" data-jqyoui-options="{revert: 'invalid'}">
+    <img ng-src="{{song.coverUrl}}" width="100" height="100">
     <p>{{song.name}}</p>
 </div>
