--- a/mobileweb/soneme/www/directives/queue.html
+++ b/mobileweb/soneme/www/directives/queue.html
@@ -1,6 +1,6 @@
-<div class="queueContainer">
+<div class="queueContainer" data-drop="true" data-jqyoui-options ng-model="queueSongs" jqyoui-droppable="{multiple:true}">
     <div class="queue">
-        <div ng-repeat="song in queueSongs" class="queueItem">
+        <div ng-repeat="song in queueSongs" class="queueItem" data-drag="false" data-jqyoui-options="{revert: 'invalid'}" ng-model="queueSongs" jqyoui-draggable="{index: {{$index}},animate:true}">
             <img ng-src="{{song.coverUrl}}" width="80px" height="80px">
         </div>
     </div>
