Add artistInfo drag&drop

--- a/mobileweb/soneme/www/directives/player.html
+++ b/mobileweb/soneme/www/directives/player.html
@@ -1,7 +1,7 @@
 <div class="footer" data-drop="true" data-jqyoui-options ng-model="queueSongs" jqyoui-droppable="{multiple:true}">
     <div class="currentSongContainer">
         <div>Now Playing</div><br/>
-        <img ng-src="{{queueSongs[0].coverUrl}}" width="80px" height="80px">
+        <img ng-src="{{nowPlaying.coverUrl}}" width="80px" height="80px">
     </div>
     <div class="queueContainer" >
         <div>Queue</div><br/>
