--- a/mobileweb/soneme/www/directives/player.html
+++ b/mobileweb/soneme/www/directives/player.html
@@ -3,6 +3,15 @@
         <div>Now Playing</div><br/>
         <img ng-src="{{nowPlaying.coverUrl}}" width="80px" height="80px">
     </div>
+    <div class="playerInfoContainer" >
+        <div>{{nowPlaying.name}}</div>
+        <div>{{nowPlaying.artist}}</div>
+        <div class="queue">
+            <div ng-repeat="song in queueSongs" class="queueItem" data-drag="false" data-jqyoui-options="{revert: 'invalid'}" ng-model="queueSongs" jqyoui-draggable="{index: {{$index}},animate:true}">
+                <img ng-src="{{song.coverUrl}}" width="80px" height="80px">
+            </div>
+        </div>
+    </div>
     <div class="queueContainer" >
         <div>Queue</div><br/>
         <div class="queue">
