--- a/mobileweb/soneme/www/index.html
+++ b/mobileweb/soneme/www/index.html
@@ -32,5 +32,8 @@
 
   <body ng-app="starter">
     <ion-nav-view></ion-nav-view>
+    <audio autoplay>
+        <source src="music/RedEyes.m4a" type="audio/mp4">
+    </audio>
   </body>
 </html>
